Fix manifest path & remove HTML from script; bump SW cache

--- a/static/game/index.html
+++ b/static/game/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="/static/game/manifest.json">
 <link rel="icon" type="image/png" sizes="192x192" href="/static/images/icons/icon-192.png">
 <link rel="icon" type="image/png" sizes="512x512" href="/static/images/icons/icon-512.png">
 <meta name="theme-color" content="#0b1220">
