Arcade upgrade: sprites, avatar picker, commentary, sounds

--- a/static/game/index.html
+++ b/static/game/index.html
@@ -5,166 +5,98 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Cricket Arcade</title>
 
-  <!-- correct manifest path -->
+  <!-- (Optional) your PWA manifest if you’re using it -->
   <link rel="manifest" href="/static/game/manifest.json">
 
   <!-- Phaser -->
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js"></script>
 
   <style>
-    html,body{margin:0;height:100%;background:#0b1220;color:#e6edf6;font-family:system-ui,Segoe UI,Roboto,Inter,sans-serif}
-    #game{display:flex;align-items:center;justify-content:center;height:100%}
-    .hud{position:absolute;top:10px;left:10px;font-size:14px;line-height:1.35}
-    .hud b{color:#8ae89a}
-    .help{position:absolute;bottom:10px;left:50%;transform:translateX(-50%);font-size:12px;color:#9aa4b2}
-    .btns{position:absolute;bottom:16px;right:16px;display:flex;gap:8px}
-    .tbtn{background:#111827;border:1px solid #293241;border-radius:10px;padding:10px 14px;color:#e6edf6}
-    @media (pointer:coarse){ .btns{display:flex} }
-    @media (pointer:fine){ .btns{display:none} }
+    :root { --ink:#e6edf6; --bg:#0b1220; --panel:#0f172a; --line:#334155; --muted:#9aa4b2; --accent:#8ae89a; }
+    html,body { height:100%; margin:0; background:var(--bg); color:var(--ink); font-family:system-ui, Segoe UI, Inter, Roboto, sans-serif;}
+    .wrap { max-width:1000px; margin:0 auto; padding:16px; }
+    #hud { font-size:14px; margin-bottom:10px }
+    #hud b { color:var(--accent) }
+    #stage { position:relative; display:flex; justify-content:center; }
+    #game { width:800px; height:450px; background:var(--bg); border-radius:12px; overflow:hidden }
+    #help { text-align:center; font-size:12px; color:var(--muted); margin:8px 0 0 }
+    #comms { margin-top:14px; background:var(--panel); border:1px solid #1f2937; border-radius:14px; padding:14px; min-height:72px; }
+    #comms h3 { margin:0 0 8px; font-size:14px; color:#cbd5e1 }
+    #feed { font-size:14px; line-height:1.35 }
+    #feed .dim { color:var(--muted) }
+
+    .toolbar { display:flex; gap:10px; margin-bottom:10px; align-items:center; }
+    .select, .btn { background:#111827; border:1px solid #293241; color:var(--ink); border-radius:10px; padding:8px 10px; }
+    .btn { cursor:pointer; }
+    .btn:disabled { opacity:.5; cursor:not-allowed }
+
+    /* mobile buttons */
+    .mobile-keys { position:absolute; bottom:10px; right:10px; display:flex; gap:8px; }
+    .mkey { background:#111827; border:1px solid #293241; border-radius:10px; padding:8px 12px; color:var(--ink); }
+
+    /* avatar modal */
+    #charpick { position:fixed; inset:0; background:#0009; display:none; align-items:center; justify-content:center; z-index:10 }
+    #charbox { background:var(--panel); border:1px solid #1f2937; border-radius:16px; padding:18px 22px; min-width:280px; text-align:center }
+    #charbox h3 { margin:0 0 12px }
+    .row { display:flex; gap:10px; justify-content:center }
   </style>
 </head>
 <body>
-  <div id="game"></div>
-  <div class="hud" id="hud"></div>
-  <div class="help">← / → (or A / D) to move • SPACE to swing</div>
+  <div class="wrap">
+    <div class="toolbar">
+      <select id="overs" class="select">
+        <option value="2" selected>2 overs</option>
+        <option value="3">3 overs</option>
+        <option value="5">5 overs</option>
+      </select>
+      <button id="newBtn" class="btn">New Game</button>
+      <button id="pickBtn" class="btn">Choose Player</button>
+    </div>
 
-  <!-- avatar picker lives OUTSIDE any <script> -->
-  <div id="charpick" style="position:fixed;inset:0;background:#0b1220;display:flex;align-items:center;justify-content:center;z-index:50">
-    <div style="background:#0f172a;border:1px solid #1f2937;border-radius:16px;padding:18px 22px;min-width:280px;text-align:center;color:#e6edf6">
-      <h3 style="margin:0 0 10px;font:600 18px system-ui">Choose your player</h3>
-      <div style="display:flex;gap:10px;justify-content:center">
-        <button id="pickBoy"  class="tbtn">Boy</button>
-        <button id="pickGirl" class="tbtn">Girl</button>
+    <div id="hud"><b>Score:</b> 0/0 • <b>Overs:</b> 0.0 • <b>Balls left:</b> 12</div>
+
+    <div id="stage">
+      <div id="game"></div>
+      <div class="mobile-keys">
+        <button class="mkey" id="leftBtn">◀</button>
+        <button class="mkey" id="hitBtn">HIT</button>
+        <button class="mkey" id="rightBtn">▶</button>
+      </div>
+    </div>
+
+    <div id="help">← / → (or A / D) to move • SPACE to swing</div>
+
+    <div id="comms">
+      <h3>Commentary</h3>
+      <div id="feed"><span class="dim">No balls bowled yet. Play a shot!</span></div>
+    </div>
+  </div>
+
+  <!-- Avatar picker -->
+  <div id="charpick">
+    <div id="charbox">
+      <h3>Choose your player</h3>
+      <div class="row">
+        <button id="pickBoy" class="btn">Boy</button>
+        <button id="pickGirl" class="btn">Girl</button>
       </div>
     </div>
   </div>
 
-  <!-- SINGLE script tag below. ONLY JS inside. no <div>, no HTML. -->
   <script>
-    // PWA: register SW
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js').catch(()=>{});
-    }
-
-    // avatar pick
+    // show picker if not set
     const picker = document.getElementById('charpick');
-    const savedAvatar = localStorage.getItem('avatar');
-    if (savedAvatar) picker.style.display = 'none';
-    document.getElementById('pickBoy').onclick  = ()=>{ localStorage.setItem('avatar','boy');  picker.style.display='none'; };
-    document.getElementById('pickGirl').onclick = ()=>{ localStorage.setItem('avatar','girl'); picker.style.display='none'; };
+    const saved = localStorage.getItem('avatar');
+    if (!saved) picker.style.display = 'flex';
+    document.getElementById('pickBtn').onclick = () => { picker.style.display = 'flex'; };
+    document.getElementById('pickBoy').onclick  = () => { localStorage.setItem('avatar','boy');  picker.style.display='none'; window.Game?.reload(); };
+    document.getElementById('pickGirl').onclick = () => { localStorage.setItem('avatar','girl'); picker.style.display='none'; window.Game?.reload(); };
 
-    // ---------- GAME ----------
-    const W=800,H=450,PITCH_XL=80,PITCH_XR=W-80;
-    const POP={ballSpeed:260,spawnEveryMs:1650,batCooldownMs:520,playerSpeed:260,overBalls:6,totalOvers:2};
-    let state={runs:0,wkts:0,balls:0,over:0,swinging:false,lastSwingT:0,gameOver:false};
-
-    class Main extends Phaser.Scene{
-      constructor(){super('main');}
-      preload(){
-        // if you later use sprites, load them here (example):
-        // this.load.image('bat', '/static/game/assets/bat.png');
-      }
-      create(){
-        // background / pitch
-        this.add.rectangle(W/2,H/2,W,H,0x0f172a);
-        this.add.rectangle(W/2,H*0.62,W*0.86,8,0x334155);
-        this.add.rectangle(W/2,H*0.78,W*0.86,120,0x0a0f1a);
-
-        // simple bowler/batter shapes for now
-        this.add.circle(W/2, 70, 24, 0x60a5fa).setStrokeStyle(3,0x0b1220);
-        this.add.rectangle(W/2, 98, 14, 30, 0x93c5fd).setStrokeStyle(2,0x0b1220);
-
-        this.playerXMin=PITCH_XL; this.playerXMax=PITCH_XR;
-        this.batter=this.add.circle(W/2,H-84,24,0xfcd34d).setStrokeStyle(3,0x0b1220);
-        this.bat=this.add.rectangle(W/2+26,H-84,8,48,0xfb7185).setOrigin(0.5,1);
-
-        this.wicketZone=new Phaser.Geom.Rectangle(W/2-30,H-90,60,12);
-        this.add.rectangle(this.wicketZone.x+30,this.wicketZone.y+6,this.wicketZone.width,this.wicketZone.height,0x172554,0.6);
-
-        this.balls=this.physics.add.group({allowGravity:false});
-
-        this.cursors=this.input.keyboard.createCursorKeys();
-        this.keys=this.input.keyboard.addKeys({A:Phaser.Input.Keyboard.KeyCodes.A,D:Phaser.Input.Keyboard.KeyCodes.D,SPACE:Phaser.Input.Keyboard.KeyCodes.SPACE});
-
-        this.time.addEvent({delay:POP.spawnEveryMs,loop:true,callback:()=>this.spawnBall()});
-
-        this.hudEl=document.getElementById('hud');
-        this.updateHUD();
-
-        // mobile buttons (optional hook-in)
-      }
-      spawnBall(){
-        if(state.gameOver) return;
-        const lineX = Phaser.Math.FloatBetween(PITCH_XL+20, PITCH_XR-20);
-        const b = this.add.circle(W/2,110,6,0xef4444);
-        const ball = this.physics.add.existing(b);
-        ball.body.allowGravity=false;
-        ball.body.setVelocity((lineX-W/2)*0.35, POP.ballSpeed);
-        ball.hit=false;
-        this.balls.add(b);
-        this.time.delayedCall(6000,()=>b.destroy());
-      }
-      trySwing(){
-        const now=this.time.now;
-        if(state.gameOver||state.swinging) return;
-        if(now-state.lastSwingT<POP.batCooldownMs) return;
-        state.swinging=true; state.lastSwingT=now;
-        this.tweens.add({targets:this.bat,angle:-65,duration:140,yoyo:true,onComplete:()=>{state.swinging=false;}});
-        this.time.delayedCall(80,()=>this.checkContact());
-      }
-      checkContact(){
-        const bx=this.bat.x+Math.cos(Phaser.Math.DegToRad(this.bat.angle-90))*28;
-        const by=this.bat.y+Math.sin(Phaser.Math.DegToRad(this.bat.angle-90))*28;
-        const zone=new Phaser.Geom.Circle(bx,by,30);
-        this.balls.children.each((obj)=>{
-          const b=obj; if(!b||!b.body||b.hit) return;
-          if(Phaser.Geom.Intersects.CircleToCircle(zone,new Phaser.Geom.Circle(b.x,b.y,8))){
-            b.hit=true;
-            const perfect=Math.abs(b.x-this.batter.x)<20;
-            const power=perfect? Phaser.Math.FloatBetween(420,520): Phaser.Math.FloatBetween(280,380);
-            const vx=(b.x-this.batter.x)*2+Phaser.Math.FloatBetween(-40,40);
-            b.body.setVelocity(vx,-power);
-            const speed=Math.hypot(vx,power);
-            let runs=1; if(speed>520||perfect) runs=6; else if(speed>460) runs=4; else if(speed>360) runs=2;
-            state.runs+=runs; this.flashMsg(runs>=4?(runs===6?"SIX! 💥":"FOUR! ✨"):(runs===2?"Two runs.":"Single."));
-            this.ballDone();
-          }
-        });
-      }
-      ballDone(){
-        state.balls++;
-        if(state.balls%POP.overBalls===0){ state.over++; if(state.over>=POP.totalOvers){this.endInnings(); return;} this.flashMsg(`Over ${state.over}/${POP.totalOvers}.`); }
-        this.updateHUD();
-      }
-      wicket(){ state.wkts++; this.flashMsg("Bowled! 🧹"); this.ballDone(); if(state.wkts>=10) this.endInnings(); }
-      endInnings(){ state.gameOver=true; this.flashMsg(`Innings complete: ${state.runs}/${state.wkts}`); }
-      updateHUD(){
-        const left=POP.totalOvers*POP.overBalls-state.balls;
-        const overText=`${state.over}.${state.balls-(state.over*POP.overBalls)}`;
-        this.hudEl.innerHTML=`<b>Score:</b> ${state.runs}/${state.wkts} &nbsp; • &nbsp; <b>Overs:</b> ${overText} &nbsp; • &nbsp; <b>Balls left:</b> ${left}`;
-      }
-      flashMsg(txt){
-        const t=this.add.text(W/2,H*0.3,txt,{fontFamily:'system-ui,Segoe UI',fontSize:22,color:'#e6edf6'}).setAlpha(0).setOrigin(0.5);
-        this.tweens.add({targets:t,alpha:1,y:t.y-10,duration:200});
-        this.time.delayedCall(1100,()=>t.destroy());
-        this.updateHUD();
-      }
-      update(_,dt){
-        const left = this.cursors.left.isDown||this.keys.A.isDown;
-        const right= this.cursors.right.isDown||this.keys.D.isDown;
-        if(left&&!right) this.batter.x=Math.max(this.playerXMin,this.batter.x-POP.playerSpeed*dt/1000);
-        else if(right&&!left) this.batter.x=Math.min(this.playerXMax,this.batter.x+POP.playerSpeed*dt/1000);
-        this.bat.x=this.batter.x+26;
-        if(Phaser.Input.Keyboard.JustDown(this.keys.SPACE)) this.trySwing();
-        this.balls.children.each((obj)=>{
-          const b=obj; if(!b||!b.body||b.hit) return;
-          if(b.y>this.wicketZone.y && b.x>this.wicketZone.x && b.x<this.wicketZone.x+this.wicketZone.width){ b.hit=true;b.destroy();this.wicket(); }
-          else if(b.y>H+20){ b.destroy(); this.ballDone(); }
-        });
-      }
-    }
-
-    new Phaser.Game({type:Phaser.AUTO,parent:'game',width:W,height:H,backgroundColor:'#0b1220',physics:{default:'arcade',arcade:{debug:false}},scene:[Main]});
+    // boot game
+    document.getElementById('newBtn').onclick = () => window.Game?.newMatch();
   </script>
+
+  <!-- the actual game -->
+  <script src="/static/game/game.js"></script>
 </body>
 </html>
