Fix asset paths for Render

--- a/static/game/index.html
+++ b/static/game/index.html
@@ -130,11 +130,12 @@
 
   function preload(){
     // your assets (relative to index.html)
-    this.load.image('boy','assets/batter_boy.png');
-    this.load.image('girl','assets/batter_girl.png');
-    this.load.image('bowler','assets/bowler.png');
-    this.load.image('bat','assets/bat.png');
-    this.load.image('ball','assets/ball.png');
+    this.load.image('batterBoy', '/static/game/assets/batter_boy.png');
+    this.load.image('batterGirl', '/static/game/assets/batter_girl.png');
+    this.load.image('bowler', '/static/game/assets/bowler.png');
+    this.load.image('bat', '/static/game/assets/bat.png');
+    this.load.image('ball', '/static/game/assets/ball.png');
+
   }
 
   function create(){
